--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "react-scripts": "1.0.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "css-hot-loader": "^1.3.0",
+    "node-sass": "^4.5.3",
+    "react-app-rewired": "^1.1.0",
+    "sass-loader": "^6.0.6"
   }
 }
