--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-plugin-component-resolver": "^1.2.0",
     "css-hot-loader": "^1.3.0",
     "node-sass": "^4.5.3",
     "react-app-rewired": "^1.1.0",
