--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "devDependencies": {
     "babel-plugin-component-resolver": "^1.2.0",
     "css-hot-loader": "^1.3.0",
     "node-sass": "^4.5.3",
     "react-app-rewired": "^1.1.0",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-styleguidist": "^6.0.11",
     "sass-loader": "^6.0.6"
   }
 }
